# RVGRT-server-

./: Dockerfile  deploy_oracle_example.txt  docker-compose.yml  main.py  pyproject.toml  readme.md  test_client.py
src/: main.py  models.py  server.py
src/logger_admin/: manage.py
src/logger_admin/admin_app/: views.py
src/logger_admin/admin_app/templates/admin_app/: logs.html
src/logger_admin/logger_admin/: asgi.py  settings.py  urls.py  wsgi.py
