[project]
name = "rvgrt-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.12",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
    "websockets>=16.0",
    "whitenoise>=6.6.0",
]
